io-takamaka-examples/src/main/java/io/takamaka/tests/errors/illegaltypeforstoragefield4/MyInterface.java
package io.takamaka.tests.errors.illegaltypeforstoragefield4;

public interface MyInterface {
}